# Modelling-and-Simulation-homeworks

./: README.md
SandSeabedProject/: CMakeLists.txt
SandSeabedProject/data/: project.conf
SandSeabedProject/include/: Configuration.h  SeaSandMotionCA.h
SandSeabedProject/source/: main.cpp
SandSeabedProject/versione_allegro4/: CMakeLists.txt
SandSeabedProject/versione_allegro4/data/: minus1.tga  plus.tga  project.conf
SandSeabedProject/versione_allegro4/include/: Configuration.h  Drawer.h  SeaSandMotionCA.h
SandSeabedProject/versione_allegro4/source/: main.cpp
SandSeabedProject/versione_allegro5/: CMakeLists.txt
SandSeabedProject/versione_allegro5/data/: project.conf
SandSeabedProject/versione_allegro5/include/: Drawer.h  SeaSandMotionCA.h
SandSeabedProject/versione_allegro5/source/: main.cpp
SandSeabedProject/versione_senza_opencal/data/: project.conf
SandSeabedProject/versione_senza_opencal/include/: CellularAutomaton.h  Configuration.h  Drawer.h
SandSeabedProject/versione_senza_opencal/source/: main.cpp
VegetalEpidemic/: CMakeLists.txt  README.md  VegetalEpidemic.md  main.cpp
VegetalEpidemic/data/: matrix.conf
VegetalEpidemic/include/: Drawer.h  VegetalEpidemic.h
